[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { workspace = true, features = ["alloc"], optional = true }
#axstd = { workspace = true, features = ["alloc", "alloc-slab"], optional = true }
#axstd = { workspace = true, features = ["alloc", "alloc-buddy"], optional = true }
