[package]
name = "alt_axalloc"
version.workspace = true
edition = "2021"

[features]
default = []

[dependencies]
log = "0.4.21"
cfg-if = "1.0"
kspin = "0.1"
memory_addr = "0.3"
axerrno = "0.1"
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["bitmap"] }
bump_allocator = { path = "../bump_allocator" }
