[package]
name = "axalloc"
version.workspace = true
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS global memory allocator"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axalloc"
documentation = "https://arceos-org.github.io/arceos/axalloc/index.html"

[features]
default = ["lab"]
tlsf = ["allocator/tlsf"]
slab = ["allocator/slab"]
buddy = ["allocator/buddy"]
lab = ["lab_allocator"]

[dependencies]
log = "0.4.21"
cfg-if = "1.0"
kspin = "0.1"
memory_addr = "0.3"
axerrno = "0.1"
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["bitmap"] }
lab_allocator = { path = "../../labs/lab_allocator", optional = true }
