[package]
name = "riscv_vcpu"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.19"
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"

riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = { version = "0.0.6", features = ["legacy"] }
sbi-rt = { version = "0.0.2", features = ["integer-impls", "legacy"] }
tock-registers = "0.8.1"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }

axerrno = "0.1.0"
#page_table_entry = "0.3.3"
memory_addr = "0.3"
axhal = { workspace = true }
