[package]
name = "h_4_0"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
axstd = { workspace = true, features = ["alloc", "paging", "fs", "multitask", "irq"] }
axhal = { workspace = true }
axmm = { workspace = true }
riscv_vcpu = { path = "../../modules/riscv_vcpu" }
axerrno = "0.1"
memory_addr = "0.3"
