[package]
name = "m_1_1"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { workspace = true, features = ["alloc", "paging", "multitask", "sched_cfs"], optional = true }
axmm = { workspace = true }
axhal = { workspace = true, features = ["uspace"] }
axsync = { workspace = true }
axtask = { workspace = true }
axlog = { workspace = true }
axerrno = "0.1"
linkme = "0.3"
